--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  retrofit: ^4.9.0
+  pretty_dio_logger: ^1.4.0
+  dio: ^5.9.0
+  flutter_bloc: ^9.1.1
+  get_it: ^9.0.5
+  cached_network_image: ^3.4.1
+  logger: ^2.6.2
+  cupertino_icons: ^1.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: ^6.11.1
+  build_runner: ^2.10.1
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
