--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-  retrofit: ^4.9.0
+
   pretty_dio_logger: ^1.4.0
   dio: ^5.9.0
   flutter_bloc: ^9.1.1
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.4.1
   logger: ^2.6.2
   cupertino_icons: ^1.0.8
+  retrofit: ^4.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
@@ -50,6 +51,7 @@ dev_dependencies:
 
   json_serializable: ^6.11.1
   build_runner: ^2.10.1
+  retrofit_generator: ^10.1.2
 
 
 
