--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: countries
 description: "Information about each country and its details"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,7 +33,7 @@ dependencies:
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
-
+  flutter_svg: ^2.2.2
   pretty_dio_logger: ^1.4.0
   dio: ^5.9.0
   flutter_bloc: ^9.1.1
@@ -53,8 +53,6 @@ dev_dependencies:
   build_runner: ^2.10.1
   retrofit_generator: ^10.1.2
 
-
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -67,7 +65,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
