--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   retrofit: ^4.9.0
   url_launcher: ^6.3.0
   shared_preferences: ^2.5.3
+  firebase_crashlytics: ^5.0.4
+  firebase_analytics: ^12.0.4
+  firebase_core: ^4.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
