--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_crashlytics: ^5.0.4
   firebase_analytics: ^12.0.4
   firebase_core: ^4.2.1
+  firebase_remote_config: ^6.1.2
+  firebase_performance: ^0.11.1+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
